--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -9,10 +9,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
    <children>
-      <GridPane layoutX="-10.0" prefHeight="79.0" prefWidth="1231.0" style="-fx-background-color: red;">
+      <GridPane layoutX="-10.0" prefHeight="60.0" prefWidth="1231.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -20,12 +19,27 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane fx:id="topPane" prefHeight="66.0" prefWidth="1231.0" style="-fx-background-color: green;" />
+            <Pane fx:id="topPane" prefHeight="60.0" prefWidth="1231.0">
+               <children>
+                  <Button layoutX="1106.0" layoutY="11.0" mnemonicParsing="false" text="Admain" />
+               </children></Pane>
          </children>
       </GridPane>
-      <Pane fx:id="leftPane" layoutX="14.0" layoutY="113.0" prefHeight="548.0" prefWidth="321.0" style="-fx-background-color: red;" />
-      <ListView layoutX="346.0" layoutY="138.0" prefHeight="523.0" prefWidth="621.0" style="-fx-background-color: yellow;" />
-      <ListView fx:id="leftPane" layoutX="986.0" layoutY="138.0" prefHeight="523.0" prefWidth="200.0" style="-fx-background-color: brown;" />
-      <Label layoutX="1044.0" layoutY="100.0" text="Categories" />
+      <Pane fx:id="leftPane" layoutX="14.0" layoutY="89.0" prefHeight="591.0" prefWidth="321.0" style="-fx-background-color: red;">
+         <children>
+            <Label layoutX="102.0" layoutY="23.0" text="MK Restaurant" />
+            <Label fx:id="rAddress" layoutX="72.0" layoutY="61.0" />
+            <Label fx:id="rPhone" layoutX="60.0" layoutY="110.0" text="Phone #:  (540) 770-1100" />
+            <TableView layoutX="8.0" layoutY="165.0" prefHeight="60.0" prefWidth="303.0">
+              <columns>
+                <TableColumn prefWidth="118.0" text="Product" />
+                <TableColumn prefWidth="83.0" text="Quantity" />
+                  <TableColumn prefWidth="101.0" text="Price" />
+              </columns>
+            </TableView>
+         </children></Pane>
+      <ListView fx:id="listView" layoutX="346.0" layoutY="138.0" prefHeight="523.0" prefWidth="621.0" style="-fx-background-color: yellow;" />
+      <ListView fx:id="rightPane" layoutX="987.0" layoutY="113.0" prefHeight="567.0" prefWidth="200.0" style="-fx-background-color: brown;" />
+      <Label fx:id="labelCategory" layoutX="1045.0" layoutY="72.0" text="Categories" />
    </children>
 </AnchorPane>
