--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -35,18 +35,18 @@
             <Label fx:id="rPhone" layoutX="60.0" layoutY="110.0" text="Phone #:  (540) 770-1100" />
             <TableView fx:id="itemListTable" layoutX="-1.0" layoutY="153.0" prefHeight="232.0" prefWidth="321.0">
               <columns>
-                <TableColumn fx:id="pName" prefWidth="124.0" text="Product" />
-                <TableColumn fx:id="quantity" prefWidth="101.0" text="Quantity" />
-                  <TableColumn fx:id="productPrice" minWidth="0.0" prefWidth="95.0" text="Price" />
+                <TableColumn fx:id="pName" prefWidth="124.0" resizable="false" text="Product" />
+                <TableColumn fx:id="quantity" prefWidth="101.0" resizable="false" text="Quantity" />
+                  <TableColumn fx:id="productPrice" minWidth="0.0" prefWidth="95.0" resizable="false" text="Price" />
               </columns>
             </TableView>
-            <TableView fx:id="totalPriceTable" layoutY="403.0" prefHeight="166.0" prefWidth="321.0">
-              <columns>
-                <TableColumn prefWidth="93.0" text="Total item" />
-                <TableColumn prefWidth="89.0" text="Discount" />
-                  <TableColumn minWidth="9.0" prefWidth="138.0" text="Total Price" />
-              </columns>
-            </TableView>
+            <Label fx:id="totalItemT" layoutX="2.0" layoutY="460.0" prefHeight="27.0" prefWidth="109.0" text="Total item" />
+            <Label fx:id="discountT" layoutX="105.0" layoutY="460.0" prefHeight="27.0" prefWidth="101.0" text="Discount" />
+            <Label fx:id="totalPriceT" layoutX="190.0" layoutY="460.0" prefHeight="27.0" prefWidth="128.0" text="Total Price" />
+            <Label fx:id="totalItem" layoutX="35.0" layoutY="502.0" text="0" />
+            <Label fx:id="discount" layoutX="135.0" layoutY="502.0" text="0 %" />
+            <Label fx:id="totalPrice" layoutX="239.0" layoutY="502.0" text="0" />
+            <Button fx:id="removeItem" layoutX="7.0" layoutY="397.0" mnemonicParsing="false" text="Remove Item" />
          </children></Pane>
       <ListView fx:id="rightPane" layoutX="987.0" layoutY="113.0" prefHeight="567.0" prefWidth="200.0" style="-fx-background-color: brown;" />
       <Label fx:id="labelCategory" layoutX="1054.0" layoutY="81.0" text="Categories" />
