--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
    <children>
-      <GridPane layoutX="-10.0" prefHeight="60.0" prefWidth="1231.0">
+      <GridPane layoutX="-10.0" prefHeight="52.0" prefWidth="1231.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -19,16 +19,16 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane fx:id="topPane" prefHeight="60.0" prefWidth="1231.0">
+            <Pane fx:id="topPane" prefHeight="41.0" prefWidth="1231.0">
                <children>
-                  <Button layoutX="1070.0" layoutY="17.0" mnemonicParsing="false" text="Admain" />
+                  <Button layoutX="1070.0" layoutY="7.0" mnemonicParsing="false" text="Admain" />
                </children>
                <padding>
                   <Insets bottom="10.0" top="10.0" />
                </padding></Pane>
          </children>
       </GridPane>
-      <Pane fx:id="leftPane" layoutX="14.0" layoutY="89.0" prefHeight="591.0" prefWidth="321.0">
+      <Pane fx:id="leftPane" layoutX="14.0" layoutY="65.0" prefHeight="627.0" prefWidth="340.0">
          <children>
             <Label fx:id="rName" layoutX="56.0" layoutY="14.0" text="MK Restaurant" />
             <Label fx:id="rAddress" layoutX="56.0" layoutY="50.0" text="Address" />
@@ -40,22 +40,22 @@
                   <TableColumn fx:id="productPrice" minWidth="0.0" prefWidth="95.0" resizable="false" text="Price" />
               </columns>
             </TableView>
-            <Label fx:id="totalItemT" layoutX="3.0" layoutY="414.0" prefHeight="27.0" prefWidth="109.0" text="Total item" />
-            <Label fx:id="discountT" layoutX="106.0" layoutY="414.0" prefHeight="27.0" prefWidth="101.0" text="Discount%" />
-            <Label fx:id="priceT" layoutX="191.0" layoutY="414.0" prefHeight="27.0" prefWidth="128.0" text="Item Price" />
-            <Label fx:id="totalItem" layoutX="29.0" layoutY="456.0" text="0" />
-            <Label fx:id="discountPer" layoutX="124.0" layoutY="456.0" text="0 %" />
-            <Label fx:id="sumPrice" layoutX="218.0" layoutY="456.0" text="0" />
-            <Button fx:id="removeItem" layoutX="7.0" layoutY="365.0" mnemonicParsing="false" text="Remove Item" />
-            <Label fx:id="discount" layoutX="127.0" layoutY="533.0" text="0" />
-            <Label fx:id="totalPrice" layoutX="222.0" layoutY="533.0" text="0" />
-            <Label fx:id="totalT" layoutX="112.0" layoutY="496.0" prefHeight="17.0" prefWidth="207.0" text="Discount   Total Price" />
+            <Label fx:id="totalItemT" layoutX="3.0" layoutY="419.0" prefHeight="27.0" prefWidth="109.0" text="Total item" />
+            <Label fx:id="discountT" layoutX="106.0" layoutY="419.0" prefHeight="27.0" prefWidth="101.0" text="Discount%" />
+            <Label fx:id="priceT" layoutX="191.0" layoutY="419.0" prefHeight="27.0" prefWidth="128.0" text="Item Price" />
+            <Label fx:id="totalItem" layoutX="29.0" layoutY="461.0" text="0" />
+            <Label fx:id="discountPer" layoutX="124.0" layoutY="461.0" text="0 %" />
+            <Label fx:id="sumPrice" layoutX="218.0" layoutY="461.0" text="0" />
+            <Button fx:id="removeItem" layoutX="11.0" layoutY="365.0" mnemonicParsing="false" />
+            <Label fx:id="discount" layoutX="124.0" layoutY="537.0" text="0" />
+            <Label fx:id="totalPrice" layoutX="219.0" layoutY="537.0" text="0" />
+            <Label fx:id="totalT" layoutX="88.0" layoutY="498.0" prefHeight="27.0" prefWidth="225.0" text="Discount        Total Price" />
+            <Button fx:id="updateCart" layoutX="80.0" layoutY="365.0" mnemonicParsing="false" />
+            <Button fx:id="checkOut" layoutX="232.0" layoutY="574.0" mnemonicParsing="false" />
          </children></Pane>
-      <ListView fx:id="rightPane" layoutX="987.0" layoutY="113.0" prefHeight="567.0" prefWidth="200.0" style="-fx-background-color: brown;" />
-      <Label fx:id="labelCategory" layoutX="1054.0" layoutY="81.0" text="Categories" />
-      <ScrollPane hbarPolicy="NEVER" layoutX="342.0" layoutY="113.0" prefHeight="567.0" prefWidth="638.0" vbarPolicy="NEVER">
+      <ScrollPane hbarPolicy="NEVER" layoutX="358.0" layoutY="113.0" prefHeight="567.0" prefWidth="831.0" vbarPolicy="NEVER">
          <content>
-            <FlowPane fx:id="flowPane" hgap="5.0" prefHeight="567.0" prefWidth="616.0" vgap="5.0" />
+            <FlowPane fx:id="flowPane" hgap="5.0" prefHeight="567.0" prefWidth="846.0" vgap="5.0" />
          </content>
       </ScrollPane>
    </children>
