--- a/src/style/CSSStyle.css
+++ b/src/style/CSSStyle.css
@@ -60,6 +60,19 @@
     -fx-padding: 0;
 }
 
+.text-field {
+    -fx-font-size: 16px;
+    -fx-border-width: 0 0 1 0;
+    -fx-border-color: #000;
+    -fx-border-radius: 60px;
+    -fx-border-style: dashed;
+    -fx-background-color: transparent;
+}
+
+.text-field .placeholder {
+    -fx-font-size: 16px;
+}
+
 .button {
     -fx-font-size: 18px;
     -fx-font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
@@ -137,6 +150,10 @@
     -fx-background-color: transparent;
     -fx-background-radius: 30;
     -fx-background-insets: 0;
+}
+
+#leftPane .button:hover {
+    -fx-background-color: lightgray;
 }
 
 #removeItem {
