--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="783.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
    <children>
       <GridPane layoutX="-10.0" prefHeight="52.0" prefWidth="1231.0">
         <columnConstraints>
@@ -28,36 +28,52 @@
                </padding></Pane>
          </children>
       </GridPane>
-      <Pane fx:id="leftPane" layoutX="14.0" layoutY="65.0" prefHeight="627.0" prefWidth="340.0">
+      <Pane fx:id="leftPane" layoutX="14.0" layoutY="65.0" prefHeight="641.0" prefWidth="340.0">
          <children>
             <Label fx:id="rName" layoutX="56.0" layoutY="14.0" text="MK Restaurant" />
             <Label fx:id="rAddress" layoutX="56.0" layoutY="50.0" text="Address" />
             <Label fx:id="rPhone" layoutX="56.0" layoutY="96.0" text="Phone #:  (540) 770-1100" />
-            <TableView fx:id="itemListTable" layoutY="121.0" prefHeight="232.0" prefWidth="321.0">
+            <TableView fx:id="itemListTable" layoutY="135.0" prefHeight="232.0" prefWidth="321.0">
               <columns>
                 <TableColumn fx:id="pName" prefWidth="124.0" resizable="false" text="Product" />
                 <TableColumn fx:id="quantity" prefWidth="101.0" resizable="false" text="Quantity" />
                   <TableColumn fx:id="productPrice" minWidth="0.0" prefWidth="95.0" resizable="false" text="Price" />
               </columns>
             </TableView>
-            <Label fx:id="totalItemT" layoutX="3.0" layoutY="419.0" prefHeight="27.0" prefWidth="109.0" text="Total item" />
-            <Label fx:id="discountT" layoutX="106.0" layoutY="419.0" prefHeight="27.0" prefWidth="101.0" text="Discount%" />
-            <Label fx:id="priceT" layoutX="191.0" layoutY="419.0" prefHeight="27.0" prefWidth="128.0" text="Item Price" />
-            <Label fx:id="totalItem" layoutX="29.0" layoutY="461.0" text="0" />
-            <Label fx:id="discountPer" layoutX="124.0" layoutY="461.0" text="0 %" />
-            <Label fx:id="sumPrice" layoutX="218.0" layoutY="461.0" text="0" />
-            <Button fx:id="removeItem" layoutX="11.0" layoutY="365.0" mnemonicParsing="false" />
-            <Label fx:id="discount" layoutX="124.0" layoutY="537.0" text="0" />
-            <Label fx:id="totalPrice" layoutX="219.0" layoutY="537.0" text="0" />
-            <Label fx:id="totalT" layoutX="88.0" layoutY="498.0" prefHeight="27.0" prefWidth="225.0" text="Discount        Total Price" />
-            <Button fx:id="updateCart" layoutX="80.0" layoutY="365.0" mnemonicParsing="false" />
-            <Button fx:id="checkOut" layoutX="232.0" layoutY="574.0" mnemonicParsing="false" />
+            <Label fx:id="totalItemT" layoutX="3.0" layoutY="433.0" prefHeight="27.0" prefWidth="109.0" text="Total item" />
+            <Label fx:id="discountT" layoutX="106.0" layoutY="433.0" prefHeight="27.0" prefWidth="101.0" text="Discount%" />
+            <Label fx:id="priceT" layoutX="191.0" layoutY="433.0" prefHeight="27.0" prefWidth="128.0" text="Item Price" />
+            <Label fx:id="totalItem" layoutX="29.0" layoutY="475.0" text="0" />
+            <Label fx:id="discountPer" layoutX="124.0" layoutY="475.0" text="0 %" />
+            <Label fx:id="sumPrice" layoutX="218.0" layoutY="475.0" text="0" />
+            <Button fx:id="removeItem" layoutX="11.0" layoutY="379.0" mnemonicParsing="false" />
+            <Label fx:id="discount" layoutX="124.0" layoutY="551.0" text="0" />
+            <Label fx:id="totalPrice" layoutX="219.0" layoutY="551.0" text="0" />
+            <Label fx:id="totalT" layoutX="88.0" layoutY="512.0" prefHeight="27.0" prefWidth="225.0" text="Discount        Total Price" />
+            <Button fx:id="updateCart" layoutX="80.0" layoutY="379.0" mnemonicParsing="false" />
+            <Button fx:id="checkOut" layoutX="232.0" layoutY="588.0" mnemonicParsing="false" />
+            <ComboBox fx:id="numQuantity" layoutX="191.0" layoutY="379.0" prefHeight="39.0" prefWidth="128.0" promptText="Quantity" />
          </children></Pane>
-      <ScrollPane hbarPolicy="NEVER" layoutX="358.0" layoutY="144.0" prefHeight="536.0" prefWidth="831.0" vbarPolicy="NEVER">
+      <ScrollPane hbarPolicy="NEVER" layoutX="358.0" layoutY="144.0" prefHeight="562.0" prefWidth="831.0" vbarPolicy="NEVER">
          <content>
             <FlowPane fx:id="flowPane" hgap="5.0" prefHeight="569.0" prefWidth="827.0" vgap="5.0" />
          </content>
       </ScrollPane>
       <TextField fx:id="searchKeyWord" layoutX="888.0" layoutY="81.0" prefHeight="39.0" prefWidth="298.0" promptText="Search by keyword" />
+      <GridPane layoutX="-5.0" layoutY="735.0" prefHeight="61.0" prefWidth="1221.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Pane fx:id="footer" prefHeight="74.0" prefWidth="1221.0" style="-: red;">
+               <children>
+                  <Label fx:id="copyRight" layoutX="411.0" layoutY="17.0" text="copyright" />
+               </children>
+            </Pane>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
