--- a/src/style/Message.css
+++ b/src/style/Message.css
@@ -4,8 +4,8 @@
 .notification-bar>.pane {
     -fx-padding: 5px 10px 5px 10px;
     -fx-background-insets: 0;
-    -fx-pref-width: 100px;
-    -fx-pref-height: 40px;
+    -fx-pref-width: 150px;
+    -fx-pref-height: 70px;
 }
 
 .notification-bar>.pane .title {
@@ -15,5 +15,7 @@
 }
 
 .notification-bar>.pane .label {
+    -fx-font-size: 16px;
+    -fx-font-family: "Times New Roman";
     -fx-alignment: center;
 }
