--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="758.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
    <children>
       <GridPane layoutX="-10.0" prefHeight="52.0" prefWidth="1231.0">
         <columnConstraints>
@@ -50,9 +50,8 @@
             <Label fx:id="discount" layoutX="124.0" layoutY="551.0" text="0" />
             <Label fx:id="totalPrice" layoutX="219.0" layoutY="551.0" text="0" />
             <Label fx:id="totalT" layoutX="88.0" layoutY="512.0" prefHeight="27.0" prefWidth="225.0" text="Discount        Total Price" />
-            <Button fx:id="updateCart" layoutX="80.0" layoutY="379.0" mnemonicParsing="false" />
             <Button fx:id="checkOut" layoutX="232.0" layoutY="588.0" mnemonicParsing="false" />
-            <ComboBox fx:id="numQuantity" layoutX="191.0" layoutY="379.0" prefHeight="39.0" prefWidth="128.0" promptText="Quantity" />
+            <ComboBox fx:id="numQuantity" layoutX="155.0" layoutY="379.0" prefHeight="39.0" prefWidth="164.0" promptText="Update Quantity " />
          </children></Pane>
       <ScrollPane hbarPolicy="NEVER" layoutX="358.0" layoutY="144.0" prefHeight="562.0" prefWidth="831.0" vbarPolicy="NEVER">
          <content>
