--- a/src/fxml/Login.fxml
+++ b/src/fxml/Login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="358.0" prefWidth="631.0" style="-fx-background-color: red;" stylesheets="@../style/Login.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Login">
+<AnchorPane fx:id="login" prefHeight="358.0" prefWidth="631.0" stylesheets="@../style/Login.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Login">
    <children>
       <Label alignment="CENTER" layoutX="271.0" layoutY="34.0" text="Login Page" />
       <TextField layoutX="168.0" layoutY="93.0" prefHeight="49.0" prefWidth="316.0" promptText="Enter login name">
