--- a/src/style/Main.css
+++ b/src/style/Main.css
@@ -153,7 +153,7 @@
 
 #rName {
     -fx-font-size: 20px;
-    -fx-font-family: 'DejaVu Serif', Georgia, "Times New Roman", Times, serif;
+    -fx-font-family: "Apple Chancery", cursive;
     -fx-font-weight: bold;
 }
 
