--- a/src/fxml/Login.fxml
+++ b/src/fxml/Login.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+
 <AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Login">
    <children>
       <Label layoutX="203.0" layoutY="34.0" text="MK Restaurant" />
       <Button layoutX="400.0" layoutY="29.0" mnemonicParsing="false" text="Sign up" />
       <TextField layoutX="167.0" layoutY="95.0" promptText="Enter username" />
-      <Button layoutX="308.0" layoutY="233.0" mnemonicParsing="false" text="Login" />
+      <Button fx:id="login" layoutX="308.0" layoutY="233.0" mnemonicParsing="false" text="Login" />
       <ImageView fx:id="imageView" fitHeight="25.0" fitWidth="30.0" layoutX="134.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/icon/Key-white.png" />
@@ -22,6 +27,7 @@
          </image>
       </ImageView>
       <PasswordField layoutX="167.0" layoutY="158.0" promptText="Enter password" />
+      <Label fx:id="incorrectLogin" layoutX="147.0" layoutY="200.0" text="Incorrect username or password" />
    </children>
    <opaqueInsets>
       <Insets left="20.0" right="20.0" />
