--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -2,6 +2,7 @@
     -fx-primary: #2A2E37;
     -fx-secondary: #FFFF8D;
     -fx-primarytext: #B2B2B2;
+    -fx-secondarytext: #ff4d4d;
 }
 
 .root {
@@ -46,4 +47,11 @@
     -fx-border-width: 1;
     -fx-border-color: -fx-secondary;
     -fx-border-style: dashed;
+}
+
+#incorrectLogin {
+    -fx-font-size: 16px;
+    -fx-font-family: "Times New Roman";
+    -fx-text-fill: -fx-secondarytext;
+    -fx-font-weight: normal;
 }
