--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -55,7 +55,7 @@
          </children></Pane>
       <ScrollPane hbarPolicy="NEVER" layoutX="358.0" layoutY="144.0" prefHeight="562.0" prefWidth="831.0" vbarPolicy="NEVER">
          <content>
-            <FlowPane fx:id="flowPane" hgap="5.0" prefHeight="569.0" prefWidth="827.0" vgap="5.0" />
+            <FlowPane fx:id="flowPane" hgap="5.0" orientation="VERTICAL" prefHeight="569.0" prefWidth="827.0" vgap="5.0" />
          </content>
       </ScrollPane>
       <TextField fx:id="searchKeyWord" layoutX="888.0" layoutY="81.0" prefHeight="39.0" prefWidth="298.0" promptText="Search by keyword" />
