--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -54,4 +54,5 @@
     -fx-font-family: "Times New Roman";
     -fx-text-fill: -fx-secondarytext;
     -fx-font-weight: normal;
+    display: none
 }
