--- a/src/style/Main.css
+++ b/src/style/Main.css
@@ -1,6 +1,9 @@
 
 * {
     -fx-text-color: #000;
+    -fx-primary-bb-color: #434549;
+    -fx-primary-bb-text: #fff;
+    -fx-secondarytext: #ff4d4d;
 }
 
 .scroll-pane {
@@ -103,6 +106,14 @@
 #topPane .button {
     -fx-font-size: 18px;
     -fx-font-family: "Times New Roman";
+}
+
+#topPane .button:hover {
+    -fx-text-fill: -fx-primary-bb-text;
+    -fx-border-width: 1px;
+    -fx-border-style: dashed;
+    -fx-border-color: -fx-secondarytext;
+    -fx-background-color: -fx-primary-bb-color;
 }
 
 #leftPane {
