--- a/src/style/Main.css
+++ b/src/style/Main.css
@@ -4,6 +4,7 @@
     -fx-primary-bb-color: #434549;
     -fx-primary-bb-text: #fff;
     -fx-secondarytext: #ff4d4d;
+    -fx-primaryheader: #232F3D;
 }
 
 .scroll-pane {
