--- a/src/fxml/Admin.fxml
+++ b/src/fxml/Admin.fxml
@@ -6,10 +6,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxml.Admin">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Admin">
    <children>
-      <Pane layoutX="6.0" layoutY="184.0" prefHeight="382.0" prefWidth="239.0" />
       <HBox prefHeight="41.0" prefWidth="1000.0" style="-fx-background-color: #232F3D;">
          <children>
             <MenuBar prefHeight="29.0" prefWidth="1000.0">
@@ -31,6 +29,36 @@
                 </Menu>
               </menus>
             </MenuBar>
+         </children>
+      </HBox>
+      <Pane layoutX="14.0" layoutY="58.0" prefHeight="484.0" prefWidth="346.0">
+         <children>
+            <Label layoutX="115.0" layoutY="26.0" text="Mk Restaurant" />
+            <TableView layoutX="12.0" layoutY="120.0" prefHeight="350.0" prefWidth="321.0">
+              <columns>
+                <TableColumn prefWidth="109.0" text="Cust ID" />
+                <TableColumn prefWidth="109.0" text="Name" />
+                  <TableColumn prefWidth="109.0" text="OrderI ID" />
+              </columns>
+            </TableView>
+            <Label layoutX="94.0" layoutY="75.0" text="List OF Order Places" />
+         </children></Pane>
+      <TableView layoutX="365.0" layoutY="100.0" prefHeight="438.0" prefWidth="616.0">
+        <columns>
+          <TableColumn prefWidth="150.0" text="ID" />
+          <TableColumn prefWidth="253.0" text="Name" />
+            <TableColumn prefWidth="110.0" text="Quantity" />
+            <TableColumn prefWidth="102.0" text="Price" />
+        </columns>
+      </TableView>
+      <TextField layoutX="711.0" layoutY="50.0" prefHeight="39.0" prefWidth="270.0" />
+      <HBox layoutY="559.0" prefHeight="41.0" prefWidth="1000.0">
+         <children>
+            <Pane prefHeight="41.0" prefWidth="1000.0" style="-fx-background-color: lightgreen;">
+               <children>
+                  <Label layoutX="479.0" layoutY="7.0" text="\@Copyright" />
+               </children>
+            </Pane>
          </children>
       </HBox>
    </children>
