--- a/src/fxml/Admin.fxml
+++ b/src/fxml/Admin.fxml
@@ -1,65 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Admin">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Admin">
    <children>
-      <HBox prefHeight="41.0" prefWidth="1000.0" style="-fx-background-color: #232F3D;">
+      <GridPane layoutX="-18.0" prefHeight="45.0" prefWidth="1137.0" style="-fx-background-color: yellow;">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <GridPane alignment="TOP_CENTER" layoutX="-18.0" layoutY="666.0" prefHeight="45.0" prefWidth="1137.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <MenuBar prefHeight="29.0" prefWidth="1000.0">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-         </children>
-      </HBox>
-      <Pane layoutX="14.0" layoutY="58.0" prefHeight="484.0" prefWidth="346.0">
-         <children>
-            <Label layoutX="115.0" layoutY="26.0" text="Mk Restaurant" />
-            <TableView layoutX="12.0" layoutY="120.0" prefHeight="350.0" prefWidth="321.0">
-              <columns>
-                <TableColumn prefWidth="109.0" text="Cust ID" />
-                <TableColumn prefWidth="109.0" text="Name" />
-                  <TableColumn prefWidth="109.0" text="OrderI ID" />
-              </columns>
-            </TableView>
-            <Label layoutX="94.0" layoutY="75.0" text="List OF Order Places" />
-         </children></Pane>
-      <TableView layoutX="365.0" layoutY="100.0" prefHeight="438.0" prefWidth="616.0">
-        <columns>
-          <TableColumn prefWidth="150.0" text="ID" />
-          <TableColumn prefWidth="253.0" text="Name" />
-            <TableColumn prefWidth="110.0" text="Quantity" />
-            <TableColumn prefWidth="102.0" text="Price" />
-        </columns>
-      </TableView>
-      <TextField layoutX="711.0" layoutY="50.0" prefHeight="39.0" prefWidth="270.0" />
-      <HBox layoutY="559.0" prefHeight="41.0" prefWidth="1000.0">
-         <children>
-            <Pane prefHeight="41.0" prefWidth="1000.0" style="-fx-background-color: lightgreen;">
+            <Pane prefHeight="45.0" prefWidth="1137.0" style="-fx-background-color: red;">
                <children>
-                  <Label layoutX="479.0" layoutY="7.0" text="\@Copyright" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="569.0" layoutY="9.0" nodeOrientation="LEFT_TO_RIGHT" text="\@Copyright" />
                </children>
             </Pane>
          </children>
-      </HBox>
+      </GridPane>
    </children>
 </AnchorPane>
