Fix product table and it design, login and out and menu for Admin(Employee) UI.

--- a/src/style/Admin.css
+++ b/src/style/Admin.css
@@ -8,34 +8,47 @@
 .table-view {
     -fx-table-cell-border-color: transparent;
     -fx-background-color: transparent;
-    -fx-border: none;
 }
 
 .table-view .column-header {
     -fx-border-width: 0 0 1 0;
-    -fx-background-color: transparent;
+    -fx-background-color: #ff4d4d;
 }
 
 .table-view .column-header .label{
-    -fx-font-family: "Times New Roman";
-    -fx-font-size: 18px;
-    -fx-font-weight: bold;
+    -fx-text-fill: #FFF;
+    -fx-font-family: Arial;
+    -fx-font-size: 20px;
+    -fx-padding: 5 0 5 0;
 }
 
 .table-view .table-row-cell {
-    -fx-border-width: 0;
     -fx-background-color: transparent;
-    -fx-border-style: dashed;
+    -fx-border-width: 1 0 1 0;
+    -fx-border-color: #ff4d4d;
 }
 
-.table-view .table-row-cell .text {
-    -fx-font-size: 15px;
+.table-view .table-row-cell:odd{
+    -fx-background-color: #cdd1d8;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+
+.table-view .table-row-cell .text{
+    -fx-font-size: 17px;
+    -fx-font-family: "Times New Roman";
 }
 
 .table-view .table-row-cell:selected .text{
-    -fx-background-color: steelblue;
-    -fx-fill: #b2030c;
-    -fx-font-weight: bolder;
+    -fx-fill: #000;
+}
+
+.table-view .table-row-cell:selected {
+    -fx-background-color: #ff9966;
+}
+
+.table-view .table-row-cell:hover{
+    -fx-background-color: #ff9966;
 }
 
 .table-view .table-column{
@@ -107,6 +120,26 @@
 
 #adminPane {
     -fx-padding: 0;
+}
+
+#topPane {
+    -fx-background-color: -fx-primarybc;
+}
+
+#topPane #logout {
+    -fx-font-size: 18px;
+    -fx-text-fill: #FFF;
+    -fx-font-family: "Times New Roman";
+    -fx-background-color: transparent;
+    -fx-border-width: 0;
+}
+
+#topPane #logout:hover {
+    -fx-background-color:  #0096C9;
+}
+
+#leftPane {
+    -fx-border-style: dashed;
 }
 
 
