--- a/src/fxml/Admin.fxml
+++ b/src/fxml/Admin.fxml
@@ -5,17 +5,59 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Admin">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="687.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Admin">
    <children>
-      <GridPane layoutX="-8.0" prefHeight="30.0" prefWidth="1121.0">
+      <GridPane layoutX="367.0" layoutY="84.0" prefHeight="14.0" prefWidth="435.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
+         <opaqueInsets>
+            <Insets left="15.0" right="15.0" />
+         </opaqueInsets>
+      </GridPane>
+      <GridPane alignment="TOP_CENTER" layoutX="-18.0" layoutY="655.0" prefHeight="45.0" prefWidth="1137.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <MenuBar prefHeight="29.0" prefWidth="1119.0">
+            <Pane prefHeight="45.0" prefWidth="1137.0" style="-fx-background-color: #5e5f6b;">
+               <children>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="379.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" style="-fx-text-fill: #FFF; -fx-font-size: 16px;" text="Copyright © 2018. All right reserved. Powered by M.K Platform" />
+               </children>
+            </Pane>
+         </children>
+      </GridPane>
+      <Pane fx:id="leftPane" layoutX="5.0" layoutY="68.0" prefHeight="552.0" prefWidth="336.0" style="-fx-border-width: 0 2 2 0; -fx-border-color: red;">
+         <children>
+            <Label layoutX="96.0" layoutY="35.0" style="-fx-font-size: 20px; -fx-font-family: Apple Chancery, cursive; -fx-font-weight: bold;" text="MK Restaurant " />
+            <Label layoutX="14.0" layoutY="158.0" text="Order Places" />
+            <TableView layoutX="7.0" layoutY="211.0" prefHeight="326.0" prefWidth="323.0">
+              <columns>
+                <TableColumn prefWidth="88.0" text="Order #" />
+                <TableColumn prefWidth="124.0" text="CustName" />
+                  <TableColumn prefWidth="110.0" text="Cust Num" />
+              </columns>
+            </TableView>
+         </children>
+      </Pane>
+      <TableView fx:id="productTable" layoutX="355.0" layoutY="116.0" prefHeight="488.0" prefWidth="713.0">
+        <columns>
+          <TableColumn fx:id="productID" prefWidth="128.0" resizable="false" text="Product ID" />
+          <TableColumn fx:id="productName" prefWidth="355.0" resizable="false" text="Name" />
+            <TableColumn fx:id="productQuantity" prefWidth="100.0" resizable="false" text="Quantity" />
+            <TableColumn fx:id="productPrice" prefWidth="129.0" resizable="false" text="Price" />
+        </columns>
+      </TableView>
+      <TextField fx:id="searchP" layoutX="813.0" layoutY="65.0" prefHeight="27.0" prefWidth="255.0" promptText="Search product by key" />
+      <Pane fx:id="topPane" layoutX="-12.0" layoutY="-8.0" prefHeight="53.0" prefWidth="1137.0">
+         <children>
+            <MenuBar layoutX="14.0" layoutY="10.0" prefHeight="39.0" prefWidth="300.0">
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
@@ -39,57 +81,14 @@
                               <Button mnemonicParsing="false" text="Customer" />
                            </graphic>
                         </MenuItem>
-                    <MenuItem mnemonicParsing="false">
-                           <graphic>
-                              <Button fx:id="logout" mnemonicParsing="false" text="Sign Out" />
-                           </graphic>
-                        </MenuItem>
+                    <MenuItem mnemonicParsing="false" />
                   </items>
                 </Menu>
               </menus>
             </MenuBar>
-         </children>
-         <opaqueInsets>
-            <Insets left="15.0" right="15.0" />
-         </opaqueInsets>
-      </GridPane>
-      <GridPane alignment="TOP_CENTER" layoutX="-18.0" layoutY="655.0" prefHeight="45.0" prefWidth="1137.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Pane prefHeight="45.0" prefWidth="1137.0" style="-fx-background-color: #5e5f6b;">
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="376.0" layoutY="14.0" nodeOrientation="LEFT_TO_RIGHT" style="-fx-text-fill: #FFF; -fx-font-size: 16px;" text="Copyright © 2018. All right reserved. Powered by M.K Platform" />
-               </children>
-            </Pane>
-         </children>
-      </GridPane>
-      <Pane layoutX="5.0" layoutY="42.0" prefHeight="578.0" prefWidth="307.0" style="-fx-background-color: yellow;">
-         <children>
-            <Label layoutX="102.0" layoutY="14.0" text="MK Restaurant " />
-            <Label layoutX="14.0" layoutY="158.0" text="Order Places" />
-            <TableView layoutX="7.0" layoutY="211.0" prefHeight="353.0" prefWidth="296.0">
-              <columns>
-                <TableColumn prefWidth="88.0" text="Order #" />
-                <TableColumn prefWidth="118.0" text="Customer Name" />
-                  <TableColumn prefWidth="89.0" text="Cust Num" />
-              </columns>
-            </TableView>
+            <Button fx:id="logout" layoutX="986.0" layoutY="10.0" mnemonicParsing="false" onAction="#logOut" text="Sign Out" />
          </children>
       </Pane>
-      <TableView fx:id="productTable" layoutX="333.0" layoutY="82.0" prefHeight="535.0" prefWidth="735.0">
-        <columns>
-          <TableColumn fx:id="productID" prefWidth="128.0" resizable="false" text="Product ID" />
-          <TableColumn fx:id="productName" prefWidth="374.0" resizable="false" text="Name" />
-            <TableColumn fx:id="productQuantity" prefWidth="113.0" resizable="false" text="Quantity" />
-            <TableColumn fx:id="productPrice" prefWidth="118.0" resizable="false" text="Price" />
-        </columns>
-      </TableView>
-      <TextField fx:id="searchP" layoutX="813.0" layoutY="42.0" prefHeight="27.0" prefWidth="255.0" promptText="Search product by key" />
    </children>
    <opaqueInsets>
       <Insets />
