--- a/src/fxml/MainIndex.fxml
+++ b/src/fxml/MainIndex.fxml
@@ -30,7 +30,7 @@
       </GridPane>
       <Pane fx:id="leftPane" layoutX="14.0" layoutY="65.0" prefHeight="641.0" prefWidth="340.0">
          <children>
-            <Label fx:id="rName" layoutX="79.0" layoutY="14.0" text="MK Restaurant" />
+            <Label fx:id="rName" layoutX="52.0" layoutY="1.0" text="M.Keita Online Store" />
             <Label fx:id="rAddress" layoutX="56.0" layoutY="50.0" text="Address" />
             <Label fx:id="rPhone" layoutX="56.0" layoutY="96.0" text="Phone #:  (540) 770-1100" />
             <TableView fx:id="itemListTable" layoutY="135.0" prefHeight="232.0" prefWidth="321.0">
@@ -53,9 +53,9 @@
             <Button fx:id="checkOut" layoutX="232.0" layoutY="588.0" mnemonicParsing="false" />
             <ComboBox fx:id="numQuantity" layoutX="155.0" layoutY="379.0" prefHeight="39.0" prefWidth="164.0" promptText="Update Quantity " />
          </children></Pane>
-      <ScrollPane hbarPolicy="NEVER" layoutX="358.0" layoutY="144.0" prefHeight="562.0" prefWidth="831.0" vbarPolicy="NEVER">
+      <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="358.0" layoutY="144.0" prefHeight="562.0" prefWidth="831.0" vbarPolicy="NEVER">
          <content>
-            <FlowPane fx:id="flowPane" hgap="5.0" orientation="VERTICAL" prefHeight="569.0" prefWidth="827.0" vgap="5.0" />
+            <FlowPane fx:id="flowPane" hgap="5.0" orientation="VERTICAL" prefHeight="561.0" prefWidth="827.0" vgap="5.0" />
          </content>
       </ScrollPane>
       <TextField fx:id="searchKeyWord" layoutX="888.0" layoutY="81.0" prefHeight="39.0" prefWidth="298.0" promptText="Search by keyword" />
