--- a/src/fxml/CheckoutIndex.fxml
+++ b/src/fxml/CheckoutIndex.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="750.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Checkout">
+<AnchorPane fx:id="root" prefHeight="750.0" prefWidth="936.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Checkout">
    <children>
-      <TableView layoutX="111.0" layoutY="14.0" prefHeight="270.0" prefWidth="810.0">
+      <TableView fx:id="cartTable" layoutX="63.0" layoutY="14.0" prefHeight="287.0" prefWidth="810.0">
         <columns>
           <TableColumn fx:id="itemImage" minWidth="200.0" prefWidth="75.0" text="Image" />
           <TableColumn fx:id="itemName" minWidth="200.0" prefWidth="330.0" text="Name" />
@@ -16,8 +16,35 @@
             <TableColumn fx:id="itemPrice" minWidth="152.0" prefWidth="152.0" text="Price" />
         </columns>
       </TableView>
-      <Label layoutX="111.0" layoutY="307.0" text="Message" />
-      <TextField layoutX="111.0" layoutY="356.0" promptText="First name" />
-      <TextField layoutX="388.0" layoutY="356.0" promptText="Last name" />
+      <Label fx:id="message" layoutX="63.0" layoutY="308.0" prefWidth="810.0" text="Important: If you are not login, please click on My Account to login. If you do not have an Account, click on the Sign Up button and create an Account" />
+      <TextField fx:id="firstName" layoutX="63.0" layoutY="376.0" promptText="Enter first name" />
+      <TextField fx:id="lastName" layoutX="306.0" layoutY="376.0" promptText="Enter last name" />
+      <TextField fx:id="address" layoutX="63.0" layoutY="431.0" prefHeight="27.0" prefWidth="370.0" promptText="Street address" />
+      <TextField fx:id="city" layoutX="63.0" layoutY="485.0" promptText="City" />
+      <TextField fx:id="state" layoutX="306.0" layoutY="485.0" promptText="State" />
+      <TextField fx:id="zipcode" layoutX="63.0" layoutY="538.0" promptText="Zipcode" />
+      <TextField fx:id="rUserName" layoutX="62.0" layoutY="636.0" promptText="Enter username" />
+      <TextField fx:id="userName" layoutX="373.0" layoutY="376.0" promptText="Enter username" />
+      <PasswordField fx:id="password" layoutX="373.0" layoutY="429.0" promptText="Enter password" />
+      <Button fx:id="login" layoutX="536.0" layoutY="511.0" mnemonicParsing="false" text="Login" />
+      <Button fx:id="submit" layoutX="427.0" layoutY="692.0" mnemonicParsing="false" text="Submit" />
+      <Button fx:id="clearAll" layoutX="286.0" layoutY="692.0" mnemonicParsing="false" text="Clear All" />
+      <Label fx:id="incorrectLogin" layoutX="343.0" layoutY="481.0" text="Incorrect username or passworld" />
+      <TextField fx:id="rPassword" layoutX="294.0" layoutY="636.0" promptText="Enter password" />
+      <Label fx:id="createMessage" layoutX="63.0" layoutY="597.0" text="Create A Login UserName and Password" />
+      <Button fx:id="signUp" layoutX="645.0" layoutY="333.0" mnemonicParsing="false" onAction="#enableSignUpField" text="Sign Up" />
+      <Button fx:id="myAccount" layoutX="745.0" layoutY="333.0" mnemonicParsing="false" onAction="#enableLoginField" text="My Account" />
+      <Button fx:id="forgetPassword" layoutX="335.0" layoutY="511.0" mnemonicParsing="false" text="Forget Password" />
+      <ImageView fx:id="imageViewU" fitHeight="25.0" fitWidth="30.0" layoutX="343.0" layoutY="378.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/icon/user.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="imageViewP" fitHeight="25.0" fitWidth="30.0" layoutX="343.0" layoutY="432.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/icon/Key-white.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="viewCartItem" layoutX="488.0" layoutY="333.0" mnemonicParsing="false" text="View Cart Items" />
    </children>
 </AnchorPane>
